@@ -6,6 +6,7 @@ CHANGELOG
 
 2022/10/12
 - TestEngine: WindowInfo() support when child is not in root of parent window.
+- TestEngine: Removed legacy GetChildWindowID() in favor of easier to use and more featured WindowInfo().
 
 2022/10/11
 - TestEngine: literals can now easily be encoded in decorated path strings using "$$xxxx",
